Np 46928 NviInstitutionReportGenerator, Handle sqs events (#134)
* Rename to NviInstitutionReportGenerator

* Update template for NviInstitutionReportGenerator

* Update tests for NviInstitutionReportGenerator

* Add S3Client

* Green test shouldLogRequest

* Green test shouldWriteTextFileToS3

* Make page size env var.

* Green test shouldWriteExcelFileToS3

* Remove NviInstitutionReportGenerator from openApi spec

* GraphStoreProtocolConnectionTest shouldGetResultSet

* Add logging

* Log after updated offset

* Presigner: only support excel

* Update VisibilityTimeout for GenerateNviInstitutionReportQueue

* Add SqsManagedPolicy for NviInstitutionReportGenerator

* Add missing env vars

* Generator input type SQSEvent. Handle batch size 1

* Log after persisting report

* Add S3ManagedPolicy for NviInstitutionReportGenerator

* Add S3NviReportsManagedPolicy

* Use S3NviReportsManagedPolicy for NviInstitutionReportGenerator

* Add test shouldWriteExcelFileWithErrorMessageIfAnyErrorOccurs

* Green test shouldWriteExcelFileWithErrorMessageIfGenerationFails

* Refactor

* Update openApi

* Make test shouldWriteExcelFileToS3 more robust

* Refactor, code review
